<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/my_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSpotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:background="#F08C35"
        android:text="@string/button_spotify"

        />
    <!-- android:onClick="showToast" -->


    <Button
        android:id="@+id/buttonScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/buttonSpotify"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#F08C35"
        android:onClick="showToast"
        android:text="@string/button_scores" />

    <Button
        android:id="@+id/buttonLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/buttonScores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#F08C35"
        android:onClick="showToast"
        android:text="@string/button_library" />


    <Button
        android:id="@+id/buttonBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/buttonLibrary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#F08C35"
        android:onClick="showToast"
        android:text="@string/button_build" />

    <Button
        android:id="@+id/buttonBacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/buttonBuild"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#F08C35"
        android:onClick="showToast"
        android:text="@string/button_bacon" />

    <Button
        android:id="@+id/buttonCapstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/buttonBacon"
        android:layout_centerHorizontal="true"
        android:background="#ff0c03"
        android:onClick="showToast"
        android:text="@string/button_capstone" />


</RelativeLayout>
